[package]
name = "label-logger"
version = "0.2.1"
edition = "2021"

description = "Cargo-like logging library"
authors = ["Milo Moisson <milomoisson@gmail.com>"]
repository = "https://github.com/MrNossiom/label-logger"
license = "CECILL-2.1"
keywords = ["label", "pretty-logs", "cargo"]
categories = ["rendering"]

[dependencies]
console = "0.15.5"
dialoguer = { version = "0.10.4", optional = true }
indicatif = { version = "0.17.3", optional = true }
once_cell = "1.17.1"
term_size = "0.3.2"

[features]
default = []
dialoguer = ["dep:dialoguer"]
indicatif = ["dep:indicatif"]

[dev-dependencies]
rand = "0.8.5"

[lints]
[lints.clippy]
nursery = "warn"
pedantic = "warn"
cargo = "warn"

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "indicatif"
required-features = ["indicatif"]

[[example]]
name = "dialoguer"
required-features = ["dialoguer"]
