[package]
name = "label-logger"
version = "0.2.1"
edition = "2021"

# Most recent std item is `LazyLock`
rust-version = "1.80.0"

description = "Cargo-like logging library"
authors = ["Milo Moisson <milomoisson@gmail.com>"]
repository = "https://github.com/mrnossiom/label-logger"
license = "CECILL-2.1"
keywords = ["label", "pretty-logs", "cargo"]
categories = ["rendering"]

[dependencies]
console = "0.15"
once_cell = "1.17"
term_size = "0.3"

dialoguer = { version = "0.11", optional = true }
indicatif = { version = "0.17", optional = true }

[features]
default = []
dialoguer = ["dep:dialoguer", "dialoguer/fuzzy-select", "dialoguer/password"]
indicatif = ["dep:indicatif"]

[dev-dependencies]
rand = "0.8.5"

[lints]
[lints.rust]
unsafe_code = "deny"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "indicatif"
required-features = ["indicatif"]

[[example]]
name = "dialoguer"
required-features = ["dialoguer"]
