[package]
name = "label-logger"
version = "0.2.4"
edition = "2024"
rust-version = "1.85"

description = "Cargo-like logging library"
authors = ["Milo Moisson <milo@wiro.world>"]
repository = "https://github.com/mrnossiom/label-logger"
license = "CECILL-2.1"
keywords = ["label", "pretty-logs", "cargo"]
categories = ["rendering"]

[dependencies]
console = "0.16"
once_cell = "1.17"
term_size = "0.3"

dialoguer = { version = "0.12", optional = true }
indicatif = { version = "0.18", optional = true }

[dev-dependencies]
rand = "0.9"

[features]
default = []
dialoguer = ["dep:dialoguer", "dialoguer/fuzzy-select", "dialoguer/password"]
indicatif = ["dep:indicatif"]

[lints]
[lints.rust]
unsafe_code = "forbid"
[lints.rustdoc]
all = "warn"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "indicatif"
required-features = ["indicatif"]

[[example]]
name = "dialoguer"
required-features = ["dialoguer"]
